fixed bug in slider index calc; show period covered in the 'headline'

--- a/opt/dcs-pasi/public/css/slider.css
+++ b/opt/dcs-pasi/public/css/slider.css
@@ -8,7 +8,7 @@
 .noUi-vertical .noUi-handle {
 	width: 18px;
 	height: 4px;
-	background-color: green; /* rgb(62, 142, 208); */
+	background-color: rgb(62, 142, 208); 
 	border: 0;
 	box-shadow: none;
 	cursor: pointer;
@@ -34,4 +34,5 @@
 .noUi-value {
 	padding-left: 0;
   font-size: small;
+  color: black;
 }
